# algorithms

Frenet&Cartesian/: coordinate.py  cubic_spline.py
Frenet_planning/: coordinate.py  cubic_spline.py  following.py  quartic_poly.py  quintic_poly.py  stopping.py  velocity_keeping.py
discretized_points_smoothing/: CMakeLists.txt  fem_pos_deviation_osqp_interface.cpp  fem_pos_deviation_osqp_interface.h  fem_pos_deviation_sqp_osqp_interface.cpp  fem_pos_deviation_sqp_osqp_interface.h  main.cpp  visual.py
mpc/: README.md  mpc_linear.py
spiral/: polynomial_spiral.py
